--- a/index.html
+++ b/index.html
@@ -1304,7 +1304,7 @@
                 <div class="testimonial-wrap">
                   <div class="testimonial-item">
                     <img
-                      src="assets/img/testimonials/grace-infrastructure-client-picture.webp"
+                      src="assets/img/testimonials/"
                       class="testimonial-img"
                       alt=""
                     />
